<resources>
    <string name="app_name">Test App</string>
    <string name="btn_start">START</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prod_name">Samsung Galaxy A50S</string>
    <string name="fitur_produk"><b>Fitur Produk</b></string>
    <string name="detail_prod">
        \u2022 Smartphone dengan layar 6.4 inch (full rectangle)/ 6.2 inch (rounded corners) \n
        \u2022 Dibekali dengan sistem operasi Android dan prosesor Octa-Core 2.3GHz, 1.7GHz \n
        \u2022 Dilengkapi dengan kamera belakang kamera belakang multiple 48.0 MP + 5.0 MP  8.0 MP dan kamera depan 32.0 MP \n
        \u2022 Untuk mendukung dayanya smartphone ini menggunakan baterai berkapasitas 4000 mAh \n
    </string>
    <string name="pelayanan_produk"><b>Pelayanan Produk</b></string>
    <string name="garansi_produk">\u2022 Garansi: Garansi Resmi 1 Tahun</string>
    <string name="cicilan_produk">\u2022 Cicilan 0% dari bank tertentu</string>
    <string name="pengembalian_produk">\u2022 15 hari Pengembalian Produk</string>
    <string name="deskripsi_lengkap_button">Lihat deskripsi produk selengkapnya</string>
    <string name="beli_sekarang">BELI SEKARANG</string>
</resources>
