<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </androidx.viewpager.widget.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/prod_name"
                    android:textColor="#000000"
                    android:layout_marginVertical="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/fitur_produk"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/detail_prod"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/pelayanan_produk"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garansi_produk"
                    android:textSize="18dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cicilan_produk"
                    android:textSize="18dp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengembalian_produk"
                    android:textSize="18dp"
                    android:textColor="#000000"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:id="@+id/btn_detail_lengkap"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_lengkap_button"
                    android:textSize="18dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"/>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>